--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -6,17 +6,16 @@
             <div class="container">
                 <a class="button" href="#popup9" *ngIf="isLogged">Agregar skill</a>
                 <div class="popup" id="popup9">
-                    <div class="popup-inner">
+                    <div class="popup-inner mt-5">
                         <div class="popupphoto">
                             <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
                                 alt="">
                         </div>
                         <div class="popuptext">
-                            <h1>Agrega Tegnologia</h1>
-                            <p><a href="https://github.com/ignam03">Visitar Github</a></p>
+                            <h1 class="text-center">Agregar Tegnologia</h1>
                             <div class="container">
                                 <form id="contact" action="" method="post">
-                                    <h3>Tegnologia</h3>
+                                    <h3 class="text-center">Tegnologia</h3>
                                     <h4></h4>
                                     <fieldset>
                                         <input placeholder="Nombre de la tegnologia" id="idNombreTec" name="nombreTec"
@@ -34,7 +33,7 @@
                                 </form>
                             </div>
                         </div>
-                        <a class="closepopup" href="#">X</a>
+                        <a class="closepopup" href="#skills">X</a>
                     </div>
                 </div>
             </div>
@@ -43,11 +42,10 @@
             <div class="column left">
                 <div class="text">Mis skills & experiencia.</div>
                 <p>
-                    I am currently learning from curriculum of FreeCodeCamp and
-                    youtube channel CodeWithHarry.
+                    Me especializo en el desarrollo de aplicaciones web tipo SPA con Angular, Typescript , Javascript, Java y NodeJs.
                 </p>
-                <a href="https://www.freecodecamp.org/sarfarazkhan" target="_blank">FreeCodeCamp<i
-                        class="fa fa-free-code-camp"></i></a>
+                <a href="https://github.com/ignam03" target="_blank">Github   <i
+                        class="fa fa-github"></i></a>
             </div>
             <div class="column right">
                 <div class="bars" *ngFor="let skill of habilidades">
@@ -56,17 +54,16 @@
                             <a class="button fa fa-pencil" href="#popup1" *ngIf="isLogged" (click)="loadSkill(skill.habId)"></a>
                             <a class="button fa fa-trash" href="#popup2" *ngIf="isLogged" (click)="deleteSkill(skill.habId)"></a>
                             <div class="popup" id="popup1">
-                                <div class="popup-inner">
+                                <div class="popup-inner mt-5">
                                     <div class="popupphoto">
                                         <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
                                             alt="">
                                     </div>
                                     <div class="popuptext">
-                                        <h1>Actualizar Tegnologia</h1>
-                                        <p><a href="https://github.com/ignam03">Visitar Github</a></p>
+                                        <h1 class="text-center">Actualizar Tegnologia</h1>
                                         <div class="container">
                                             <form id="contact" action="" method="post">
-                                                <h3>Tegnologia</h3>
+                                                <h3 class="text-center">Tegnologia</h3>
                                                 <h4></h4>
                                                 <fieldset>
                                                     <input placeholder="Nombre de la tegnologia" id="idNombreTec" name="nombreTec"
@@ -84,7 +81,7 @@
                                             </form>
                                         </div>
                                     </div>
-                                    <a class="closepopup" href="#">X</a>
+                                    <a class="closepopup" href="#skills">X</a>
                                 </div>
                             </div>
                         </div>
